src/test/ui/derives/derive-assoc-type-not-impl.stderr
error[E0599]: no method named `clone` found for type `Bar<NotClone>` in the current scope
  --> $DIR/derive-assoc-type-not-impl.rs:18:30
   |
LL | struct Bar<T: Foo> {
   | ------------------ method `clone` not found for this
...
LL |     Bar::<NotClone> { x: 1 }.clone();
   |                              ^^^^^
   |
   = note: the method `clone` exists but the following trait bounds were not satisfied:
           `Bar<NotClone> : std::clone::Clone`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
